apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-public-readonly
  namespace: gitea
spec:
  ingressClassName: traefik
  rules:
    - host: git.thanaspapa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-public-readonly-proxy
                port:
                  number: 80
