apps/gitea/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-internal
  namespace: gitea
  annotations:
    cert-manager.io/cluster-issuer: gentoo-internal-ca
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - git.gentoo.lan
      secretName: gitea-gentoo-lan-tls
  rules:
    - host: git.gentoo.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
